update compiler args