@@ -18,7 +18,10 @@
                     <source>18</source>
                     <target>18</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>
+                        <arg>-enable-preview</arg>
+                        <arg>-Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false clean package</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
